# FlashHTTP

./: .gitignore  404.html  CMakeCache.txt  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  cmake_install.cmake  index.html  libflashttp.so.1  libflashttp.so.1.0.0  mkdocs.yml  search.html
api-reference/data-structures/: index.html
api-reference/deserialization/: index.html
api-reference/overview/: index.html
api-reference/serialization/: index.html
benchmarks/: benchmark.c  plot.py  plot_csv.py
building-and-testing/benchmarks/: index.html
building-and-testing/installation/: index.html
docs/: examples.md  index.md
docs/api-reference/: data-structures.md  deserialization.md  overview.md  serialization.md
docs/building-and-testing/: benchmarks.md  installation.md
examples/: index.html
include/: deserializer.h  flashhttp.h  flashttp.h  serializer.h  structs.h
search/: search_index.json
src/: common.c  common.h  deserializer.c  extensions.h  serializer.c
tests/: test.c
